DevOps/src/objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Name__c</fullName>
        <label>Booking Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Chater__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charter</label>
        <referenceTo>Charter__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>start_date__c</fullName>
        <label>start date</label>
        <type>Date</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Booking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>